k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moose
  namespace: moose
spec:
  selector:
    app: moose
  ports:
    - name: http
      port: 80
      targetPort: 8000
